--- a/src/main/resources/templates/admin/adminFragements.html
+++ b/src/main/resources/templates/admin/adminFragements.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 
-<nav th:fragment="admin_top(n)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+<nav th:fragment="admin_top(n)" class="ui pink inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
-            <h2 class="ui teal header item">管理后台</h2>
-            <a th:href="@{/admin/blogs}" class="m-item item m-mobile-hide" th:classappend="${n==1} ? 'active'"><i class="home icon"></i>博客</a>
-            <a th:href="@{/admin/types}" class=" m-item item m-mobile-hide" th:classappend="${n==2} ? 'active'"><i class="idea icon"></i>分类</a>
-            <a th:href="@{/admin/tags}" class="m-item item m-mobile-hide" th:classappend="${n==3} ? 'active'"><i class="tags icon"></i>标签</a>
-            <a th:href="@{/admin/comment}" class="m-item item m-mobile-hide" th:classappend="${n==4} ? 'active'"><i class="tasks icon"></i>评论</a>
+            <h2 class="ui blue header item">管理后台</h2>
+            <a th:href="@{/admin/blogs}" class="m-item item m-mobile-hide" th:classappend="${n==1} ? 'active blue'"><i class="home icon"></i>博客</a>
+            <a th:href="@{/admin/types}" class=" m-item item m-mobile-hide" th:classappend="${n==2} ? 'active blue'"><i class="idea icon"></i>分类</a>
+            <a th:href="@{/admin/tags}" class="m-item item m-mobile-hide" th:classappend="${n==3} ? 'active blue'"><i class="tags icon"></i>标签</a>
+            <a th:href="@{/admin/comment}" class="m-item item m-mobile-hide" th:classappend="${n==4} ? 'active blue'"><i class="tasks icon"></i>评论</a>
             <a th:href="@{/index}" class="m-item item m-mobile-hide"><i class="browser icon"></i>主页</a>
             <div class="right m-item m-mobile-hide menu">
                 <div class="ui dropdown  item">
