--- a/src/main/resources/templates/admin/blogs_input.html
+++ b/src/main/resources/templates/admin/blogs_input.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" th:href="@{/lib/editormd/css/editormd.min.css}">
   <link rel="stylesheet" th:href="@{/css/me.css}">
 </head>
-<body>
+<body id="blog_input">
 
   <!--导航-->
   <div th:replace="~{admin/adminFragements::admin_top(1)}"></div>
