--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -10,7 +10,7 @@
 <body>
 
   <!--导航-->
-  <nav th:replace="~{/admin/adminFragements::admin_top(3)}"></nav>
+  <nav th:replace="~{admin/adminFragements::admin_top(3)}"></nav>
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
