--- a/src/main/resources/templates/archives.html
+++ b/src/main/resources/templates/archives.html
@@ -13,7 +13,7 @@
   <!--导航-->
   <div th:replace="~{fragements::top(n=4)}"></div>
   <!--中间内容-->
-  <div  class="m-container-small m-padded-tb-big">
+  <div style="opacity: 0.8;" class="m-container-small m-padded-tb-big">
     <div class="ui container">
       <!--header-->
       <div class="ui top attached padded segment">
@@ -37,23 +37,26 @@
           </span>
             <div class="ui orange basic left pointing label m-padded-mini " th:text="${blog.getFlag()}"></div>
           </a>
+
         </div>
         <br>
         <br>
-        <div id="player"></div>
+
       </th:block>
 
     </div>
-
+    <div id="player"></div>
   </div>
 
   <br>
   <br>
   <!--底部footer-->
+
   <div th:replace="~{fragements::foot}"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/semantic-ui/2.4.1/semantic.min.js"></script>
+  <script th:src="@{/js/APlayer.min.js}"></script>
   <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget.min.js/}"></script>
   <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget0.min.js/}"></script>
   <script>
@@ -62,7 +65,7 @@
     });
 
   </script>
-  <script th:src="@{/js/APlayer.min.js}"></script>
+
   <script th:inline="javascript">
     const ap = new APlayer({
       container: document.getElementById('player'),
