--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>首页</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
+  <link rel="stylesheet" th:href="@{/css/typo.css}">
+  <link rel="stylesheet" th:href="@{/css/animate.css}">
+  <link rel="stylesheet" th:href="@{/lib/prism/prism.css}">
+  <link rel="stylesheet" th:href="@{/lib/tocbot/tocbot.css}">
   <link rel="stylesheet" th:href="@{/css/me.css}">
   <link rel="stylesheet" th:href="@{/css/APlayer.min.css}">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -12,9 +16,9 @@
 <body>
 
   <!--导航-->
-  <div th:replace="~{fragements::top(n=1)}"></div>
+  <nav style="opacity: 0.8;" th:replace="~{fragements::top(n=1)}"></nav>
   <!--中间内容-->
-  <div  class="m-container-big m-padded-tb-big">
+  <div style="opacity: 0.8;" class="m-container-big m-padded-tb-big">
     <div class="ui container">
       <div class="ui stackable grid">
         <!--左边博客列表-->
@@ -143,7 +147,7 @@
           <!--二维码-->
           <h4 class="ui horizontal divider header m-margin-top-large">扫码♂交流</h4>
           <div class="ui centered card" style="width: 11em">
-            <img th:src="@{/images/wechat.jpg}" alt="" class="ui rounded image" >
+            <img th:src="@{/images/wechat2.png}" alt="" class="ui rounded image" >
           </div>
         </div>
 
@@ -165,23 +169,11 @@
   <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget.min.js/}"></script>
   <script type="text/javascript" charset="utf-8"  th:src="@{/js/L2Dwidget0.min.js/}"></script>
   <script th:src="@{/js/APlayer.min.js}"></script>
-  <script type="text/javascript">
-  L2Dwidget.init({
-    "model": {
-      jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
-      "scale": 1
-    },
-    "display": {
-      "superSample": 3,
-      "width": 200,
-      "height": 400,
-      "position": "right",
-      "hOffset": 10,
-      "vOffset": -28
-    }
-  });
-</script>
-
+  <script>
+    $('.menu.toggle').click(function () {
+      $('.m-item').toggleClass('m-mobile-hide');
+    });
+  </script>
   <script>
     const ap = new APlayer({
       container: document.getElementById('player'),
@@ -215,6 +207,22 @@
           theme: '#46718b'
         }
       ]
+    });
+  </script>
+  <script type="text/javascript">
+    L2Dwidget.init({
+      "model": {
+        jsonPath: "https://unpkg.com/live2d-widget-model-z16@1.0.5/assets/z16.model.json",
+        "scale": 1
+      },
+      "display": {
+        "superSample": 5,
+        "width": 200,
+        "height": 400,
+        "position": "right",
+        "hOffset": 10,
+        "vOffset": -28
+      }
     });
   </script>
 
