--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -14,7 +14,7 @@
   <div th:replace="~{fragements::top(n=3)}"></div>
 
   <!--中间内容-->
-  <div  class="m-container-small m-padded-tb-big">
+  <div style="opacity: 0.8;" class="m-container-small m-padded-tb-big">
     <div class="ui container">
       <!--header-->
       <div class="ui top attached segment">
