--- a/src/main/resources/templates/typess.html
+++ b/src/main/resources/templates/typess.html
@@ -13,7 +13,7 @@
   <!--导航-->
   <div th:replace="~{fragements::top(n=2)}"></div>
   <!--中间内容-->
-  <div  class="m-container-small m-padded-tb-big">
+  <div style="opacity: 0.8;"  class="m-container-small m-padded-tb-big">
     <div class="ui container">
       <!--header-->
       <div class="ui top attached segment">
