继续优化页面（cao），修复bug

--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -3,6 +3,10 @@ body {
     background: url("/images/b1.png");
 }
 
+#blogBody{
+    background: url("/images/bg.png");
+}
+
 .m-padded-mini {
     padding: 0.2em !important;
 }
