--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.bootcss.com/tocbot/4.10.0/tocbot.css">
   <link rel="stylesheet" th:href="@{/css/me.css}">
 </head>
-<body>
+<body style="background: url('/images/bg.png');">
 
   <!-- 导航 -->
   <div th:replace="~{fragements::top(0)}"></div>
@@ -56,8 +56,8 @@
         </div>
 
         <!--赞赏-->
-        <div class="ui center aligned basic segment">
-          <button th:if="${blog.isRecommend()}" id="payButton" class="ui orange basic circular button">赞赏</button>
+        <div th:if="${blog.isAppreciation()}" class="ui center aligned basic segment">
+          <button id="payButton" class="ui orange basic circular button">赞赏</button>
         </div>
         <div class="ui payQR flowing popup transition hidden">
           <div class="ui orange basic label">
@@ -82,7 +82,7 @@
             <ui class="list">
               <li><span th:text="|作者：${blog.getManager().getNickname()}|"></span><a th:href="@{/about}" target="_blank"> (联系俺) </a></li>
               <li th:text="|更新时间：${#dates.format(blog.getUpdateTime(),'yyyy-MM-dd HH:mm')}|"></li>
-              <li>版权声明：自由转载-非商用-非衍生-保持署名</li>
+              <li th:if="${blog.isShareState()}">版权声明：自由转载-非商用-非衍生-保持署名</li>
             </ui>
           </div>
           <div class="five wide column">
@@ -90,10 +90,10 @@
           </div>
         </div>
       </div>
-      <div class="ui bottom attached segment">
+      <div th:if="${blog.isComment()}"  class="ui bottom attached segment">
         <!-- 留言区域列表，局部刷新该区域 -->
         <div id="comment-container" class="ui teal segment">
-          <div th:fragment="commentList">
+          <div  th:fragment="commentList">
             <div class="ui threaded comments" style="max-width: 100%">
               <h3 class="ui dividing header">评论</h3>
               <div class="comment" th:each="comments:${comment}">
