--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -45,7 +45,7 @@
                   <div class="ui mini horizontal link list">
                     <div class="item">
                       <img src="https://s2.ax1x.com/2020/02/18/3kGhtg.th.png" alt="" class="ui avatar image">
-                      <div class="content"><a href="@{#}"  class="header">antigenMHC</a></div>
+                      <div class="content"><a th:href="@{/about/}" th:text="${blog.manager.nickname}"  class="header">antigenMHC</a></div>
                     </div>
                     <div class="item">
                       <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime, 'yyyy-MM-dd')}" ></span>
@@ -89,12 +89,10 @@
         </div>
       </div>
       <br>
-      <br>
       <div id="player"></div>
     </div>
   </div>
 
-  <br>
   <br>
   <!--底部footer-->
   <div th:replace="~{fragements::foot}"></div>
